Handle display:contents for markup serializer.

We skipped subtree of elements with no LayoutObject, but we need to
include display:contents subtrees.

Bug: 830251
Change-Id: Ifcfb331f8974b6d2e2e2600e9d29ec13d23bbf3b
Reviewed-on: https://chromium-review.googlesource.com/1021771
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552647}
Former-commit-id: 66c6b2eb72fa636a85f4bb3854c074b5afc09dbe