third_party/blink/renderer/core/editing/serializers/styled_markup_serializer.cc
@@ -360,6 +360,7 @@ Node* StyledMarkupTraverser<Strategy>::Traverse(Node* start_node,
       }
 
       if (!n->GetLayoutObject() &&
+          (!n->IsElementNode() || !ToElement(n)->HasDisplayContentsStyle()) &&
           !EnclosingElementWithTag(FirstPositionInOrBeforeNode(*n),
                                    selectTag)) {
         next = Strategy::NextSkippingChildren(*n);
